# AI_Automation_Alert

./: .gitignore  README.md  pyproject.toml
automation_alert/: __init__.py  agentic_layer.py  cli.py  llm_client.py  models.py  onet_client.py  prompts.py  prompts_agentic.py  renderer.py  sample_data.py  scorer.py  scoring_engine.py
tests/: conftest.py  test_agentic_layer.py  test_cli.py  test_llm_client.py  test_renderer.py  test_sample_data.py  test_scorer.py  test_scoring_engine.py
